# DAMNIT-web-hzdr

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md
.github/workflows/: cleanup-pages.yml
api/: .env.production.example  pyproject.toml
api/docs/: hzdr.md
api/scripts/: hzdr-hdf5-builder.py  hzdr-local-acceptance.py
api/src/damnit_api/: main.py
api/src/damnit_api/consumer/: asapo.py  builder_trigger.py  kafka.py  spool.py
api/src/damnit_api/metadata/: hzdr_event.py  hzdr_nexus.py  hzdr_routers.py  hzdr_sources.py  routers.py  scicat.py
api/src/damnit_api/shared/: settings.py
api/tests/: test_hzdr_builder_trigger.py  test_hzdr_consumer_bootstrap.py  test_hzdr_integration.py  test_hzdr_kafka_spool.py  test_hzdr_nexus.py  test_hzdr_nexus_sample.py  test_hzdr_scicat.py  test_hzdr_semantic_golden_fixture.py  test_hzdr_simulation_link.py  test_hzdr_sources.py  test_hzdr_spool.py  test_metadata_keys.py
api/tests/fixtures/: damnit-campaign-registration.sample.json  semantic-golden-domain.synthetic.json
api/tests/graphql/: test_models.py
docs/: README.md  auto-builder-trigger-plan.md  deployment-plan.md  handoff.md  integration-roadmap.md  nxhzdr-target-profile.md  scicat-registration-plan.md  standards-alignment.md  system-overview.md  target-ontology.md  testing.md
docs/guides/: local-development.md
docs/plans/: alignment-implementation-plan.md  deployment-plan.md  remaining-work-plan.md  scicat-registration-plan.md  ui-optimization-plan.md
docs/status/: handoff.md  integration-roadmap.md  protocol-status.md  testing.md
frontend/apps/app/src/hzdr/pages/: LinkRecordsPage.tsx
frontend/apps/app/src/hzdr/utils/: link-records.ts
hzdr/docs/: README.md  architecture.md  event-schema.md  nexus-semantic-maps.md  nxhzdr-target-profile.md  openpmd-linking.md  standards-alignment.md  system-overview.md  target-ontology.md
hzdr/docs/guides/: local-development.md
hzdr/docs/plans/: alignment-implementation-plan.md  deployment-plan.md  remaining-work-plan.md  upstream-pr-plan.md
hzdr/docs/status/: handoff.md  integration-roadmap.md  protocol-status.md  testing.md
hzdr/nxdl/: NXhzdr_target.nxdl.xml
hzdr/scripts/: hzdr-launch.ps1  test-all.ps1
scripts/: test-all.ps1  test.ps1  test.sh
scripts/docs/: refresh_coverage_summary.py
