[project]
name = "damnit-api"
version = "0.1.1"
description = ""
authors = [{ name = "European XFEL", email = "da@xfel.eu" }]
requires-python = "~=3.13.0"
# if using ASAPO needs 3.12
# requires-python = ">=3.12"
readme = "README.md"
maintainers = [
    { name = "Cammille Carinan", email = "cammille.carinan@xfel.eu" },
    { name = "Robert Rosca", email = "robert.rosca@xfel.eu" },
]
dependencies = [
    "pandas~=2.0",
    "sqlalchemy[asyncio]~=2.0",
    "fastapi~=0.115",
    "orjson~=3.8",
    "numpy~=2.3",
    "matplotlib~=3.7",
    "h5py~=3.9",
    "strawberry-graphql[fastapi]>=0.283.3",
    "uvicorn[standard]~=0.29",
    "aiosqlite~=0.19",
    "scipy~=1.11",
    "authlib~=1.3",
    "itsdangerous~=2.1",
    "httpx~=0.27",
    "pydantic~=2.12",
    "pydantic-settings~=2.2",
    "async-lru~=2.0",
    "ldap3~=2.9",
    "pymongo~=4.10",
    "kafka-python-ng>=2.2.3",
    "requests~=2.32",
    "structlog~=24.4",
    "colorama~=0.4",
    "xarray>=2024.11", # uses datever
    "damnit~=0.2.1",
    "aiohttp~=3.11",
    "aiofiles>=24.1.0",
    "anyio>=4.11.0",
    "python-ulid[pydantic]>=3.1.0",
    "sqlmodel>=0.0.31",
    "motor>=3.7.1",
]

[project.optional-dependencies]
# Optional: enables real ASAPO stream activity in the flow monitor's Live mode
# (GET /config/flow-activity).  Without it the ASAPO activity block degrades to
# reachability-only; the code path is wired (lazy import in shared/flow_activity).
#
# `asapo-consumer` only publishes wheels up to cp312 (no 3.13 build yet), so the
# `python_version < "3.13"` marker keeps the base lock resolvable on this 3.13
# project — on 3.13 the extra is a no-op until a compatible wheel exists. Where a
# wheel is available: uv sync --extra asapo  (or)  pip install 'damnit-api[asapo]'
#
# Pinned to match the standalone broker image
# (gitlab.desy.de:5555/asapo/asapo/asapo-standalone:24.11.0) — client and server
# versions must match. See docs/guides/local-development.md.
asapo = ["asapo-consumer~=24.11.0; python_version < '3.13'"]

[dependency-groups]
test = ["pytest~=8.2", "pytest-asyncio~=0.24", "pytest-mock~=3.11", "pytest-cov~=7.0", "coverage~=7.0"]
lint = ["pyright>=1.1.411", "ruff>=0.7"]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "mkdocstrings[python]>=0.30.1",
    "mkdocs-api-autonav>=0.4.0",
]
# Additional development dependencies
# note that this is a separate group to `dev` as toml requires arrays to
# be of a consistent type, so this needs to be included via `include-group`
develop = [
    "datamodel-code-generator[http]>=0.35.0",
    "pre-commit>=4.5.1",
    "rich>=14.2.0",
    "strawberry-graphql>=0.283.3",
]
dev = [
    { include-group = "develop" },
    { include-group = "docs" },
    { include-group = "lint" },
    { include-group = "test" },
]

[tool.uv]
default-groups = []

[tool.pytest.ini_options]
# Session-scoped event loop so alru_cache instances bind once and never
# see a loop change between tests (no AlruCacheLoopResetWarning).
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
# Note: coverage flags are not forced here so the documented plain
# `cd api; uv run pytest` keeps working without the `test` group. The aggregate
# HZDR coverage map (docs/status/testing.md) is produced by scripts/test-all.ps1, which
# runs `uv run --group test ... --cov=damnit_api --cov-report=json:...`.

[tool.hatch.build.targets.sdist]
include = ["src/damnit_api"]

[tool.hatch.build.targets.wheel]
include = ["src/damnit_api"]

[tool.hatch.build.targets.wheel.sources]
"src/damnit_api" = "damnit_api"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
